fix spacing for .cf-nav on the post edit screen
git-svn-id: https://git.crowdfave.org/svn/crowdfavorite/code/wp-themes/carrington-personal/trunk@37204 546ca710-db30-0410-8887-d9dd8e66aff0

--- a/css/admin.css
+++ b/css/admin.css
@@ -359,7 +359,10 @@ button.cf-btn-delete {
  * Begin Specific Personal Styles
  */
 
-
+/* more space for .cf-nav on the post edit screen */
+#cf-post-format-tabs {
+	margin-top: 13px;
+}
 /** Popover - notch menus
  -------------------------------------------------- */
 .cfp-popover {
